<resources>
    <string name="app_name">Biddlr</string>
    <string name="strLogin">Login</string>
    <string name="strHome">Home</string>
    <string name="strMyJobs">My Jobs</string>
    <string name="strExplore">Explore</string>
    <string name="strProfile">Profile</string>
    <string name="strMessages">Messages</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="strCreateUser">Create Account</string>
    <string name="strForgetPass">Reset Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="strSubmit">SUBMIT</string>
    <string name="message_invalid_credentials">Invalid email or password.</string>
    <string name="mapQuestApiKey">NypbUMfluOKXSv4v02Gq1Er3kIA9AfVB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strJobView">JOB VIEW</string>
    <string name="btnContact">CONTACT</string>
    <string name="btnViewProfile">VIEW PROFILE</string>
    <string name="txtJobAskingPrice">Asking Price:</string>
    <string name="txtJobCurrentBid">Current Bid:</string>
    <string name="btnPlaceBid">PLACE A BID</string>
    <string name="strJobTitle">Job Title</string>
    <string name="strJobDesc">Job Description</string>
    <string name="strLocation">Job Address</string>
    <string name="strDate">Date</string>
    <string name="strTime">Time</string>
    <string name="strStartingPrice">Starting Price</string>
    <string name="strCreateJob">Create Job</string>
    <string name="exampleBio">This is an example bio. The user will give a short description about their experience or technical knowledge and jobs they are interested in.</string>
    <string name="strDateFormat">MM/DD/YYYY</string>
    <string name="strTimeFormat">HH:MM</string>
    <string name="action_logout">Log out</string>
    <string name="strJobs">Jobs</string>
    <string name="strJobsCompleted">Jobs Completed</string>
    <string name="completed_jobs_empty">No Completed Jobs</string>
    <string name="strBtnEditProfile">Edit Profile</string>
    <string name="txtSubmitBid">SUBMIT BID</string>
    <string name="txtCancel">CANCEL</string>
    <string name="strLowestBid">Current Lowest Bid:</string>
    <string name="strViewProfile">View Profile</string>
    <string name="strChoose">Choose</string>
    <string name="txtLowestBid">Lowest Bid:</string>
    <string name="strComplete">Mark Completed</string>
    <string name="strFinalPrice">Final Price</string>
    <string name="strRatingMsg">Would you like to rate your worker?</string>

</resources>
