<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="139dp"
        android:layout_height="105dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />


    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="85dp"
        android:autofillHints="prompt_email"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="none|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        android:autofillHints="prompt_password"/>

    <Button
        android:id="@+id/btnLogin"
        style="?android:textAppearanceSmall"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:accessibilityHeading="false"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/strLogin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnCreateUser"
        style="?android:textAppearanceSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/strCreateUser"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnForgetPass"
        style="?android:textAppearanceSmall"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/strForgetPass"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnCreateUser"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />




</android.support.constraint.ConstraintLayout>