...
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
    <EditText
        android:id="@+id/txtEnEmail"
        android:layout_width="243dp"
        android:layout_height="72dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="85dp"
        android:autofillHints="prompt_email"
...
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        style="?android:textAppearanceSmall"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
...
